apps/portainer/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: portainer
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      labels:
        app: portainer
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: portainer
          image: portainer/portainer-ee:2.39.8@sha256:c18b5d3a16b18004e219e12c6bf9b6bf257005cd005ad668c46aca2c6e375361
          args:
            - --no-csp
            - --http-disabled
            - --tlscert=/certs/tls.crt
            - --tlskey=/certs/tls.key
          ports:
            - containerPort: 9443
              name: https
              protocol: TCP
          volumeMounts:
            - name: portainer-data
              mountPath: /data
            - name: external-wildcard
              mountPath: /certs
              readOnly: true
          resources:
            requests:
              memory: 100Mi
              cpu: 5m
            limits:
              memory: 200Mi
              cpu: 500m
          livenessProbe: &probe
            httpGet:
              path: /api/settings/public
              port: https
              scheme: HTTPS
          readinessProbe: *probe
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: portainer-data
          persistentVolumeClaim:
            claimName: portainer-pvc
        - name: external-wildcard
          secret:
            secretName: external-wildcard
            defaultMode: 0400
