apps/portainer/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
  labels:
    app: portainer
spec:
  selector:
    app: portainer
  ports:
    - port: 9443
      protocol: TCP
      targetPort: 9443
      name: https
  type: ClusterIP
