apps/portainer/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portainer
  namespace: portainer
spec:
  parentRefs:
    - name: external-gateway
      namespace: gateway
  hostnames:
    - portainer.sholdee.net
  rules:
    - backendRefs:
        - name: portainer
          namespace: portainer
          port: 9443
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portainer-webhooks
  namespace: portainer
spec:
  parentRefs:
    - name: external-gateway
      namespace: gateway
  hostnames:
    - portainer.sholdee.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/stacks/webhooks
      backendRefs:
        - name: portainer
          namespace: portainer
          port: 9443
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: portainer-cloudflare-access
  namespace: portainer
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: portainer
  jwt:
    optional: true
    providers:
      - name: cloudflare-access
        issuer: https://sholdee.cloudflareaccess.com
        audiences:
          - d83e440f6003179ee0afb4385254921b7af3b89e43ad6302478efb681c427e12
        remoteJWKS:
          uri: https://sholdee.cloudflareaccess.com/cdn-cgi/access/certs
        extractFrom:
          headers:
            - name: Cf-Access-Jwt-Assertion
          cookies:
            - CF_Authorization
  authorization:
    defaultAction: Deny
    rules:
      - name: allow-private-cidrs
        action: Allow
        principal:
          clientCIDRs:
            - 10.0.0.0/8
            - 192.168.0.0/16
      - name: allow-ui
        action: Allow
        principal:
          jwt:
            provider: cloudflare-access
            claims:
              - name: iss
                values:
                  - https://sholdee.cloudflareaccess.com
              - name: aud
                valueType: StringArray
                values:
                  - d83e440f6003179ee0afb4385254921b7af3b89e43ad6302478efb681c427e12
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: portainer-cloudflare-access-webhooks
  namespace: portainer
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: portainer-webhooks
  jwt:
    optional: false
    providers:
      - name: cloudflare-access
        issuer: https://sholdee.cloudflareaccess.com
        audiences:
          - 4233850a32188524522df6fb676f0dbe64464ffd31abd1ee1bc3d1127ca8e555
        remoteJWKS:
          uri: https://sholdee.cloudflareaccess.com/cdn-cgi/access/certs
        extractFrom:
          headers:
            - name: Cf-Access-Jwt-Assertion
          cookies:
            - CF_Authorization
  authorization:
    defaultAction: Deny
    rules:
      - name: allow-webhook
        action: Allow
        operation:
          methods: ["POST"]
        principal:
          jwt:
            provider: cloudflare-access
            claims:
              - name: iss
                values:
                  - https://sholdee.cloudflareaccess.com
              - name: aud
                valueType: String
                values:
                  - 4233850a32188524522df6fb676f0dbe64464ffd31abd1ee1bc3d1127ca8e555
